@@ -150,6 +150,12 @@
 #define _SPI_NAND_DEVICE_ID_MX35LF2G14AC	0x20
 #define _SPI_NAND_DEVICE_ID_1_MX35LF2GE4AD	0x26
 #define _SPI_NAND_DEVICE_ID_2_MX35LF2GE4AD	0x03
+#define _SPI_NAND_DEVICE_ID_1_MX35LF1G24AD	0x14
+#define _SPI_NAND_DEVICE_ID_2_MX35LF1G24AD	0x03
+#define _SPI_NAND_DEVICE_ID_1_MX35LF2G24AD	0x24
+#define _SPI_NAND_DEVICE_ID_2_MX35LF2G24AD	0x03
+#define _SPI_NAND_DEVICE_ID_1_MX35LF4G24AD	0x35
+#define _SPI_NAND_DEVICE_ID_2_MX35LF4G24AD	0x03
 #define _SPI_NAND_DEVICE_ID_1_MX35UF1GE4AD	0x96
 #define _SPI_NAND_DEVICE_ID_2_MX35UF1GE4AD	0x03
 #define _SPI_NAND_DEVICE_ID_1_MX35UF2GE4AD	0xA6
@@ -696,6 +702,51 @@ static const struct SPI_NAND_FLASH_INFO_T spi_nand_flash_tables[] = {
 		read_mode:				SPI_NAND_FLASH_READ_SPEED_MODE_DUAL,
 		write_mode:				SPI_NAND_FLASH_WRITE_SPEED_MODE_SINGLE,
 		feature:				SPI_NAND_FLASH_PLANE_SELECT_HAVE,
+	},
+
+	{
+		mfr_id:					_SPI_NAND_MANUFACTURER_ID_MXIC,
+		dev_id:					_SPI_NAND_DEVICE_ID_1_MX35LF1G24AD,
+		dev_id_2:				_SPI_NAND_DEVICE_ID_2_MX35LF1G24AD,
+		ptr_name:				"MXIC MX35LF1G24AD",
+		device_size:				_SPI_NAND_CHIP_SIZE_1GBIT,
+		page_size:				_SPI_NAND_PAGE_SIZE_2KBYTE,
+		oob_size:				_SPI_NAND_OOB_SIZE_128BYTE,
+		erase_size:				_SPI_NAND_BLOCK_SIZE_128KBYTE,
+		dummy_mode:				SPI_NAND_FLASH_READ_DUMMY_BYTE_APPEND,
+		read_mode:				SPI_NAND_FLASH_READ_SPEED_MODE_DUAL,
+		write_mode:				SPI_NAND_FLASH_WRITE_SPEED_MODE_SINGLE,
+		feature:				SPI_NAND_FLASH_FEATURE_NONE,
+	},
+
+	{
+		mfr_id:					_SPI_NAND_MANUFACTURER_ID_MXIC,
+		dev_id:					_SPI_NAND_DEVICE_ID_1_MX35LF2G24AD,
+		dev_id_2:				_SPI_NAND_DEVICE_ID_2_MX35LF2G24AD,
+		ptr_name:				"MXIC MX35LF2G24AD",
+		device_size:				_SPI_NAND_CHIP_SIZE_2GBIT,
+		page_size:				_SPI_NAND_PAGE_SIZE_2KBYTE,
+		oob_size:				_SPI_NAND_OOB_SIZE_128BYTE,
+		erase_size:				_SPI_NAND_BLOCK_SIZE_128KBYTE,
+		dummy_mode:				SPI_NAND_FLASH_READ_DUMMY_BYTE_APPEND,
+		read_mode:				SPI_NAND_FLASH_READ_SPEED_MODE_DUAL,
+		write_mode:				SPI_NAND_FLASH_WRITE_SPEED_MODE_SINGLE,
+		feature:				SPI_NAND_FLASH_FEATURE_NONE,
+	},
+
+	{
+		mfr_id:					_SPI_NAND_MANUFACTURER_ID_MXIC,
+		dev_id:					_SPI_NAND_DEVICE_ID_1_MX35LF4G24AD,
+		dev_id_2:				_SPI_NAND_DEVICE_ID_2_MX35LF4G24AD,
+		ptr_name:				"MXIC MX35LF4G24AD",
+		device_size:				_SPI_NAND_CHIP_SIZE_4GBIT,
+		page_size:				_SPI_NAND_PAGE_SIZE_4KBYTE,
+		oob_size:				_SPI_NAND_OOB_SIZE_256BYTE,
+		erase_size:				_SPI_NAND_BLOCK_SIZE_256KBYTE,
+		dummy_mode:				SPI_NAND_FLASH_READ_DUMMY_BYTE_APPEND,
+		read_mode:				SPI_NAND_FLASH_READ_SPEED_MODE_DUAL,
+		write_mode:				SPI_NAND_FLASH_WRITE_SPEED_MODE_SINGLE,
+		feature:				SPI_NAND_FLASH_FEATURE_NONE,
 	},
 
 	{
