@@ -10,6 +10,7 @@ snander (1.7.8-1) UNRELEASED; urgency=medium
   * Add P25D05H/P25D10H/P25D20H/P25D40H/P25D80H/PY25Q128HA SPI NOR Flash support.
   * Add some SPI NOR Flash from EXCELSEMI/ONSEMI/ZETTA/PCT Manufacturers.
   * Add MXIC MX35LF2G14AC/MX35UF1GE4AD/MX35UF2GE4AD/MX35UF4GE4AD SPI NAND Flash support.
+  * Add MXIC MX35LF1G24AD/MX35LF2G24AD/MX35LF4G24AD SPI NAND Flash support.
   * Add GigaDevice GD5F2GQ5UE/GD5F2GQ5RE SPI NAND Flash support.
   * Add WINBOND W25N01GW/W25N04KV SPI NAND Flash support.
   * Add FORESEE FS35ND01GS1Y2 SPI NAND Flash support.
@@ -21,4 +22,4 @@ snander (1.7.8-1) UNRELEASED; urgency=medium
   * Fix print size in KB when size is less than 1MB.
   * Fix when SPI_NAND_FLASH_DEBUG is enabled.
 
- -- McMCC <mcmcc@mail.ru>  Tue, 18 Jun 2024 15:03:31 +0800
+ -- McMCC <mcmcc@mail.ru>  Fri, 21 Jun 2024 17:16:31 +0800
